# book-store-api

./: .dockerignore  .env  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0001_initial_tables.py  0002_add_roles.py  0003_add_user_full_name.py  0004_add_auth_audit_logs.py  0005_add_book_release_date.py  0006_add_book_category.py  44feb22c7189_add_pgvector_extension.py  4dda481b3b97_add_trigger_for_embedding_jobs.py  673c90666b7e_merge_conflicting_migrations.py  8f825799beaa_create_embedding_jobs_table.py  df366fdbd203_add_tsvector_column.py  e748cb939f6e_add_update_tsvector_trigger.py
app/: main.py
scripts/: docker-start.sh  seed_authors.sql  seed_book_authors.sql  seed_book_categories.sql  seed_books.sql  seed_categories.sql  seed_db.py  seed_existing_books.sql  wait_for_db.py
tests/: conftest.py  test_api_author_integration.py  test_api_book_integration.py  test_api_cart_integration.py  test_api_category_integration.py  test_api_user_integration.py  test_api_wishlist_integration.py  test_app_main.py  test_auth_audit_log_repository.py  test_auth_audit_log_service.py  test_author_repository.py  test_author_service.py  test_book_repository.py  test_book_service.py  test_cart_repository.py  test_cart_service.py  test_category_repository.py  test_category_service.py  test_order_service.py  test_role_repository.py  test_security.py  test_user_repository.py  test_user_service.py  test_wishlist_repository.py  test_wishlist_service.py
(+60 files in other folders)
